src/objects/DRE__DTE_Assert_Group__c.object
<CustomObject>
    <fields>
        <fullName>DRE__Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Records exist</fullName>
                    <default>true</default>
                    <label>Records exist</label>
                </value>
                <value>
                    <fullName>Records don&apos;t exist</fullName>
                </value>
                <value>
                    <fullName>Error occurred</fullName>
                </value>
                <value>
                    <fullName>Email was sent</fullName>
                </value>
                <value>
                    <fullName>Email was not sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__DTE_Plan__c</fullName>
        <label>DTE Plan</label>
        <referenceTo>DRE__DTE_Plan__c</referenceTo>
        <relationshipLabel>Assert Groups</relationshipLabel>
        <relationshipName>DTE_Assert_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Path__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Relationship__c</fullName>
        <label>Object Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Uid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DTE Assert Group</label>
    <nameField>
        <displayFormat>DTEASRG-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Assert Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>